--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -6,9 +6,9 @@
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <AnchorPane prefHeight="569.0" prefWidth="829.0">
       <Button fx:id="send" layoutX="695.0" layoutY="530.0" mnemonicParsing="false" onAction="#handleCommandAction" text="Send command" />
-      <ListView fx:id="listView" layoutX="248.0" layoutY="14.0" prefHeight="509.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <ListView fx:id="localFileListView" layoutX="248.0" layoutY="14.0" prefHeight="509.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
       <TextField fx:id="text" layoutX="290.0" layoutY="530.0" prefHeight="25.0" prefWidth="396.0" />
-      <ListView layoutX="22.0" layoutY="14.0" prefHeight="298.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <ListView fx:id="storageFileListView" layoutX="22.0" layoutY="14.0" prefHeight="298.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
       <Button layoutX="23.0" layoutY="530.0" mnemonicParsing="false" text="Button" />
       <Button layoutX="83.0" layoutY="530.0" mnemonicParsing="false" text="Button" />
       <Button layoutX="146.0" layoutY="530.0" mnemonicParsing="false" text="Button" />
