--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -8,17 +8,18 @@
       <ListView fx:id="localFileListView" layoutX="248.0" layoutY="58.0" prefHeight="511.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
       <ListView fx:id="storageFileListView" layoutX="22.0" layoutY="58.0" prefHeight="511.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="58.0" />
       <Button fx:id="refreshListsButton" layoutX="26.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Refresh" />
-      <Button fx:id="copyFileButton" layoutX="313.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Copy" />
-      <Button fx:id="moveFileButton" layoutX="381.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Move" />
-      <Button fx:id="deleteFileButton" layoutX="447.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Delete" />
+      <Button fx:id="copyFileButton" layoutX="558.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Copy" />
+      <Button fx:id="moveFileButton" layoutX="626.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Move" />
+      <Button fx:id="deleteFileButton" layoutX="692.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Delete" />
       <Label layoutX="11.0" layoutY="32.0" text="Login" />
       <Label layoutX="238.0" layoutY="32.0" prefHeight="17.0" prefWidth="53.0" text="Password" />
       <TextField fx:id="loginField" layoutX="46.0" layoutY="28.0" />
       <Button fx:id="signInButton" layoutX="479.0" layoutY="28.0" mnemonicParsing="false" text="Sign in" />
-      <Button layoutX="178.0" layoutY="580.0" mnemonicParsing="false" text="Make new directory" />
+      <Button layoutX="423.0" layoutY="580.0" mnemonicParsing="false" text="Make new directory" />
       <Label layoutX="550.0" layoutY="32.0" text="or" />
       <Button fx:id="regButton" layoutX="578.0" layoutY="28.0" mnemonicParsing="false" text="Registration" />
       <PasswordField fx:id="passField" layoutX="299.0" layoutY="28.0" />
+      <Button fx:id="swapButton" layoutX="121.0" layoutY="580.0" mnemonicParsing="false" text="Swap to shared files" />
    </AnchorPane>
    <columnConstraints>
       <ColumnConstraints />
