--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="619.0" prefWidth="829.0" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<GridPane alignment="center" hgap="10" prefHeight="619.0" prefWidth="829.0" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.mainController">
    <AnchorPane prefHeight="621.0" prefWidth="829.0">
       <ListView fx:id="localFileListView" layoutX="248.0" layoutY="58.0" prefHeight="511.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
       <ListView fx:id="storageFileListView" layoutX="22.0" layoutY="58.0" prefHeight="511.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="58.0" />
@@ -20,6 +20,7 @@
       <Button fx:id="regButton" layoutX="578.0" layoutY="28.0" mnemonicParsing="false" text="Registration" />
       <PasswordField fx:id="passField" layoutX="299.0" layoutY="28.0" />
       <Button fx:id="swapButton" layoutX="121.0" layoutY="580.0" mnemonicParsing="false" text="Swap to shared files" />
+      <Button fx:id="shareButton" layoutX="755.0" layoutY="580.0" mnemonicParsing="false" text="Share" />
    </AnchorPane>
    <columnConstraints>
       <ColumnConstraints />
