--- a/server/src/main/resources/storage/1/TXT/Directory/Cloud2.fxml
+++ b/server/src/main/resources/storage/1/TXT/Directory/Cloud2.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.mainController">
    <AnchorPane prefHeight="569.0" prefWidth="829.0">
       <Button fx:id="send" layoutX="695.0" layoutY="530.0" mnemonicParsing="false" text="Send command" />
       <ListView fx:id="localFileListView" layoutX="248.0" layoutY="14.0" prefHeight="509.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
