--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -20,7 +20,7 @@
       <Button fx:id="regButton" layoutX="578.0" layoutY="28.0" mnemonicParsing="false" text="Registration" />
       <PasswordField fx:id="passField" layoutX="299.0" layoutY="28.0" />
       <Button fx:id="swapButton" layoutX="121.0" layoutY="580.0" mnemonicParsing="false" text="Swap to shared files" />
-      <Button fx:id="shareButton" layoutX="755.0" layoutY="580.0" mnemonicParsing="false" text="Share" />
+      <Button fx:id="shareButton" layoutX="260.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Share" />
    </AnchorPane>
    <columnConstraints>
       <ColumnConstraints />
