--- a/client/src/main/resources/shareModalWindow.fxml
+++ b/client/src/main/resources/shareModalWindow.fxml
@@ -7,6 +7,6 @@
 <AnchorPane prefHeight="146.0" prefWidth="195.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="modalWindows.ShareModalWindowController">
    <TextField fx:id="nickNameField" layoutX="38.0" layoutY="48.0" prefHeight="25.0" prefWidth="124.0"/>
    <Button fx:id="shareConfirmButton" layoutX="38.0" layoutY="88.0" mnemonicParsing="false" text="Share"/>
-   <Button layoutX="112.0" layoutY="88.0" mnemonicParsing="false" text="Cancel"/>
+   <Button fx:id="cancelButton" layoutX="112.0" layoutY="88.0" mnemonicParsing="false" text="Cancel"/>
    <Label layoutX="38.0" layoutY="23.0" text="Type username"/>
 </AnchorPane>
