--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -3,28 +3,56 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="619.0" prefWidth="829.0" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.MainController">
-   <AnchorPane prefHeight="621.0" prefWidth="829.0">
-      <ListView fx:id="localFileListView" layoutX="248.0" layoutY="58.0" prefHeight="511.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
-      <ListView fx:id="storageFileListView" layoutX="22.0" layoutY="58.0" prefHeight="511.0" prefWidth="396.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="58.0" />
-      <Button fx:id="refreshListsButton" layoutX="26.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Refresh" />
-      <Button fx:id="copyFileButton" layoutX="423.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Copy" />
-      <Button fx:id="moveFileButton" layoutX="491.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Move" />
-      <Button fx:id="deleteFileButton" layoutX="557.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Delete" />
-      <Label layoutX="11.0" layoutY="32.0" text="Login" />
-      <Label layoutX="238.0" layoutY="32.0" prefHeight="17.0" prefWidth="53.0" text="Password" />
-      <TextField fx:id="loginField" layoutX="46.0" layoutY="28.0" />
-      <Button fx:id="signInButton" layoutX="479.0" layoutY="28.0" mnemonicParsing="false" text="Sign in" />
-      <Label layoutX="550.0" layoutY="32.0" text="or" />
-      <Button fx:id="regButton" layoutX="578.0" layoutY="28.0" mnemonicParsing="false" text="Registration" />
-      <PasswordField fx:id="passField" layoutX="299.0" layoutY="28.0" />
-      <Button fx:id="swapButton" layoutX="121.0" layoutY="580.0" mnemonicParsing="false" text="Swap to shared files" />
-      <Button fx:id="shareButton" layoutX="260.0" layoutY="580.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Share" />
-   </AnchorPane>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
-</GridPane>
+<VBox fx:id="mainPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+      minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@css/root-pane.css"
+      xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="ru.valerych.cloud2.client.main.MainController">
+    <MenuBar stylesheets="@css/menu-bar.css">
+        <Menu mnemonicParsing="false" text="File">
+            <MenuItem fx:id="closeMenuItem" mnemonicParsing="false" onAction="#closeWindow" text="Close"/>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Edit">
+            <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#openSettings"
+                      text="Sittings"/>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Help">
+            <MenuItem fx:id="aboutMenuItem" mnemonicParsing="false" onAction="#openAboutProgram" text="About"/>
+        </Menu>
+    </MenuBar>
+    <HBox prefHeight="32.0">
+        <Button fx:id="refreshButton" mnemonicParsing="false" text="Refresh"/>
+        <Button fx:id="copyButton" mnemonicParsing="false" text="Copy"/>
+        <Button fx:id="cutButton" mnemonicParsing="false" text="Cut"/>
+        <Button fx:id="pasteButton" mnemonicParsing="false" text="Paste"/>
+        <Button fx:id="moveButton" mnemonicParsing="false" text="Move"/>
+        <Button fx:id="shareButton" mnemonicParsing="false" text="Share"/>
+        <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete"/>
+    </HBox>
+    <HBox prefHeight="32.0"/>
+    <HBox VBox.vgrow="ALWAYS">
+        <VBox alignment="CENTER" HBox.hgrow="ALWAYS">
+            <HBox prefHeight="32.0" VBox.vgrow="ALWAYS">
+                <TextField editable="false" HBox.hgrow="ALWAYS"/>
+            </HBox>
+            <TableView VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn prefWidth="75.0" text="C1"/>
+                    <TableColumn prefWidth="75.0" text="C2"/>
+                </columns>
+            </TableView>
+            <TextField editable="false" prefHeight="25.0"/>
+        </VBox>
+        <VBox HBox.hgrow="ALWAYS">
+            <HBox prefHeight="32.0" VBox.vgrow="ALWAYS">
+                <TextField editable="false" HBox.hgrow="ALWAYS"/>
+            </HBox>
+            <TableView VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn prefWidth="75.0" text="C1"/>
+                    <TableColumn prefWidth="75.0" text="C2"/>
+                </columns>
+            </TableView>
+            <TextField editable="false" prefHeight="25.0"/>
+        </VBox>
+    </HBox>
+</VBox>
