--- a/client/src/main/resources/stages/connectWindow.fxml
+++ b/client/src/main/resources/stages/connectWindow.fxml
@@ -5,78 +5,78 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+      prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="ru.valerych.cloud2.client.controllers.ConnectWindowController">
    <GridPane maxWidth="300.0" prefHeight="171.0" prefWidth="300.0">
       <columnConstraints>
-         <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="111.0"/>
-         <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="189.0"/>
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="111.0" />
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="189.0" />
       </columnConstraints>
       <rowConstraints>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
       <VBox.margin>
-         <Insets/>
+         <Insets />
       </VBox.margin>
       <Label alignment="TOP_LEFT" text="Login" GridPane.halignment="RIGHT">
          <font>
-            <Font size="14.0"/>
+            <Font size="14.0" />
          </font>
          <GridPane.margin>
-            <Insets right="10.0"/>
+            <Insets right="10.0" />
          </GridPane.margin>
       </Label>
-      <Label alignment="TOP_LEFT" layoutX="175.0" layoutY="15.0" text="Password" GridPane.halignment="RIGHT"
-             GridPane.rowIndex="1">
+      <Label alignment="TOP_LEFT" layoutX="175.0" layoutY="15.0" text="Password" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
          <font>
-            <Font size="14.0"/>
+            <Font size="14.0" />
          </font>
          <GridPane.margin>
-            <Insets right="10.0"/>
+            <Insets right="10.0" />
          </GridPane.margin>
       </Label>
-      <TextField GridPane.columnIndex="1">
+      <TextField fx:id="loginTextField" GridPane.columnIndex="1">
          <GridPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </TextField>
-      <TextField text="8189" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <TextField fx:id="portTextField" text="8189" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </TextField>
       <Label text="Server URL" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
          <font>
-            <Font size="14.0"/>
+            <Font size="14.0" />
          </font>
       </Label>
       <Label text="Server port" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
          <font>
-            <Font size="14.0"/>
+            <Font size="14.0" />
          </font>
       </Label>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </TextField>
-      <TextField text="localhost" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TextField fx:id="urlTextField" text="localhost" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </TextField>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-         <Button mnemonicParsing="false" text="Log in">
+         <Button mnemonicParsing="false" onAction="#connect" text="Log in">
             <HBox.margin>
-               <Insets left="5.0" right="10.0"/>
+               <Insets left="5.0" right="10.0" />
             </HBox.margin>
          </Button>
-         <Button mnemonicParsing="false" text="Registration"/>
+         <Button mnemonicParsing="false" onAction="#registration" text="Registration" />
       </HBox>
    </GridPane>
 </VBox>
