--- a/client/src/main/resources/stages/connectWindow.fxml
+++ b/client/src/main/resources/stages/connectWindow.fxml
@@ -5,16 +5,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="ru.valerych.cloud2.client.controllers.ConnectWindowController">
+<VBox fx:id="loginWindow" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.valerych.cloud2.client.controllers.ConnectWindowController">
    <GridPane maxWidth="300.0" prefHeight="171.0" prefWidth="300.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="111.0" />
          <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="189.0" />
       </columnConstraints>
       <rowConstraints>
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -71,12 +69,17 @@
          </GridPane.margin>
       </TextField>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-         <Button mnemonicParsing="false" onAction="#connect" text="Log in">
+         <Button fx:id="loginButton" mnemonicParsing="false" text="Log in">
             <HBox.margin>
                <Insets left="5.0" right="10.0" />
             </HBox.margin>
          </Button>
-         <Button mnemonicParsing="false" onAction="#registration" text="Registration" />
+         <Button mnemonicParsing="false" text="Registration" />
       </HBox>
+      <Label fx:id="errorLabel" textFill="RED" GridPane.columnIndex="1" GridPane.rowIndex="5">
+         <font>
+            <Font size="6.0" />
+         </font>
+      </Label>
    </GridPane>
 </VBox>
