--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -7,7 +7,7 @@
 <VBox fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" stylesheets="@css/root-pane.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.valerych.cloud2.client.controllers.MainWindowController">
     <MenuBar stylesheets="@css/menu-bar.css">
         <Menu mnemonicParsing="false" text="File">
-            <MenuItem fx:id="closeMenuItem" mnemonicParsing="false" onAction="#closeWindow" text="Close" />
+            <MenuItem fx:id="closeMenuItem" mnemonicParsing="false" onAction="#close" text="Close" />
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
             <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#openSettings" text="Sittings" />
@@ -45,8 +45,13 @@
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </HBox.margin></Button>
-      <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-      <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" defaultButton="true" mnemonicParsing="false" onAction="#connectToServer" text="Connect">
+      <Pane HBox.hgrow="ALWAYS" />
+      <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" defaultButton="true" mnemonicParsing="false" onAction="#connectToServer" text="Connect" fx:id="connectButton">
+         <HBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </HBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#registration" text="Registration" fx:id="registrationButton">
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </HBox.margin>
