--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -58,9 +58,15 @@
          </HBox.margin>
       </Button>
     </HBox>
-    <HBox prefHeight="32.0" />
     <HBox VBox.vgrow="ALWAYS">
         <VBox fx:id="leftPanel" alignment="CENTER" HBox.hgrow="ALWAYS">
+          <HBox prefHeight="32.0">
+              <Button fx:id="swapLeftPanelButton" mnemonicParsing="false" onAction="#swapLeftPanelToRemote" text="Swap to remote storage">
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
+            </Button>
+          </HBox>
             <HBox prefHeight="32.0">
                 <TextField fx:id="addrTextFieldLeft" disable="true" editable="false" HBox.hgrow="ALWAYS" />
             </HBox>
@@ -86,6 +92,14 @@
             <TextField disable="true" editable="false" prefHeight="25.0" />
         </VBox>
         <VBox fx:id="rightPanel" HBox.hgrow="ALWAYS">
+            <HBox prefHeight="32.0">
+                <Button fx:id="swapRightPanelButton" mnemonicParsing="false" onAction="#swapRightPanelToRemote"
+                        text="Swap to remote storage">
+                    <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </HBox.margin>
+                </Button>
+            </HBox>
             <HBox prefHeight="32.0">
                 <TextField fx:id="addrTextFieldRight" disable="true" editable="false" HBox.hgrow="ALWAYS" />
             </HBox>
