--- a/client/src/main/resources/Cloud2.fxml
+++ b/client/src/main/resources/Cloud2.fxml
@@ -22,7 +22,7 @@
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </HBox.margin></Button>
-        <Button fx:id="copyButton" mnemonicParsing="false" text="Copy">
+        <Button fx:id="copyButton" mnemonicParsing="false" onAction="#copy" text="Copy">
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </HBox.margin></Button>
@@ -93,10 +93,9 @@
         </VBox>
         <VBox fx:id="rightPanel" HBox.hgrow="ALWAYS">
             <HBox prefHeight="32.0">
-                <Button fx:id="swapRightPanelButton" mnemonicParsing="false" onAction="#swapRightPanelToRemote"
-                        text="Swap to remote storage">
+                <Button fx:id="swapRightPanelButton" mnemonicParsing="false" onAction="#swapRightPanelToRemote" text="Swap to remote storage">
                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                     </HBox.margin>
                 </Button>
             </HBox>
